# practice-langgraph

./: .gitignore  README.md  main.py  pyproject.toml
.streamlit/: config.toml
1.sequential_flow/: 1_exercise.py
1.sequential_workflow/: bmi_calculator.py
10.chatbot_with_dummy_tools/: backend_langgraph.py  langchain_tools.py
11.chatbot_with_dummy_tools_n_ui/: backend_langgraph.py  frontend_streamlit.py
12.chatbot_with_dummy_tools_n_ui/: frontend_streamlit.py
12.chatbot_with_real_tools/: frontend_streamlit.py  langchain_tools.py
13.chatbot_with_real_tools/: frontend_streamlit.py
2.parallel_workflow/: article_evaluation.py
4.iterative_workflow/: article_evaluation.py
5.memory/: chatbot_without_memory_using_iterative_wf.py
6.chatbot_with_simple_ui/: frontend_streamlit.py
7.chatbot_with_chat_history_memory/: backend_langgraph.py  frontend_streamlit.py
8.chatbot_with_chat_history_db/: backend_langgraph.py
9.chatbot_with_chat_history_title/: backend_langgraph.py  frontend_streamlit.py  style.css
conditional_workflow/: customer_support_routing.py
iterative_workflow/: article_evaluation.py
memory/: chatbot_with_memory_basic.py  chatbot_with_memory_using_iterative_wf.py  chatbot_with_memory_using_loop.py  chatbot_without_memory_using_loop.py
